--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Barra superiore: logo + carica EPUB + stato -->
   <header class="top-bar">
     <div class="brand">
       <span class="logo-dot"></span>
@@ -21,50 +22,39 @@
     <div class="status" id="status">Nessun file caricato</div>
   </header>
 
-  <main class="reader-layout">
-    <aside class="controls">
-      <h2>Controlli lettura</h2>
+  <!-- Barra controlli compatta sotto il top -->
+  <section class="controls-bar">
+    <div class="controls-group-inline">
+      <span class="controls-title">Pagine</span>
+      <button id="prevPage" class="btn btn-ghost" type="button">&larr;</button>
+      <span id="pageIndicator" class="page-indicator">0 / 0</span>
+      <button id="nextPage" class="btn btn-ghost" type="button">&rarr;</button>
+    </div>
 
-      <div class="controls-group">
-        <label class="controls-label">Navigazione pagine</label>
-        <div class="btn-row">
-          <button id="prevPage" class="btn" type="button">&larr; Pagina prec.</button>
-          <button id="nextPage" class="btn" type="button">Pagina succ. &rarr;</button>
-        </div>
-        <div id="pageIndicator" class="page-indicator">Pagina 0 / 0</div>
-      </div>
+    <div class="controls-group-inline">
+      <span class="controls-title">Parole</span>
+      <button id="prevChunk" class="btn btn-ghost" type="button">&larr;</button>
+      <button id="nextChunk" class="btn btn-ghost" type="button">&rarr;</button>
+      <button id="toggleAuto" class="btn btn-primary-small" type="button">
+        ▶ Auto
+      </button>
+    </div>
 
-      <div class="controls-group">
-        <label class="controls-label">Evidenziatore</label>
-        <div class="btn-row">
-          <button id="prevChunk" class="btn btn-ghost" type="button">&larr; Indietro parole</button>
-          <button id="nextChunk" class="btn btn-ghost" type="button">Avanti parole &rarr;</button>
-        </div>
-        <button id="toggleAuto" class="btn btn-primary" type="button">
-          ▶ Auto evidenziatore
-        </button>
-      </div>
+    <div class="controls-group-inline controls-speed">
+      <span class="controls-title">Velocità</span>
+      <!-- 0 = 5s (lentissimo), 100 = 0,2s (veloce) -->
+      <input id="speedRange" type="range" min="0" max="100" step="1" value="40">
+      <span id="speedValue" class="speed-value">1,00 s</span>
+    </div>
+  </section>
 
-      <div class="controls-group">
-        <label class="controls-label">Velocità auto evidenziatore</label>
-        <!-- 0 = lentissimo (~2s), 100 = velocissimo (~0,08s) -->
-        <input id="speedRange" type="range" min="0" max="100" step="1" value="60">
-        <div class="speed-label">
-          <span>Lento</span>
-          <span id="speedValue">0,00 s</span>
-          <span>Veloce</span>
-        </div>
-      </div>
-
-      <p class="hint">
-        Suggerimento: clicca su un paragrafo per dirgli
-        <strong>“sto leggendo questo”</strong>.<br>
-        L’evidenziatore pastello seguirà 4 parole alla volta.
-      </p>
-    </aside>
-
+  <!-- Area centrale con quaderno -->
+  <main class="page-wrapper">
     <section class="book-area">
       <div class="book-page" id="pageContainer">
+        <!-- Sfondo quaderno che scrolla insieme al testo -->
+        <div class="paper-lines"></div>
+
         <div class="page-inner">
           <div class="placeholder">
             <h1>Benvenuto 👋</h1>
