--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
     </section>
 
     <section class="book-area">
-      <div class="book-page" id="pageContainer">
-        <div class="page-inner">
+      <div class="book-page">
+        <!-- Questo è il contenitore del testo + quaderno -->
+        <div class="page-inner" id="pageContainer">
           <div class="placeholder">
             <h1>Benvenuto 👋</h1>
             <p>Carica un file <strong>.epub</strong> dal pulsante in alto per iniziare a leggere.</p>
-            <p>Il paragrafo che stai leggendo verrà illuminato, con <strong>4 parole alla volta</strong> evidenziate con un effetto evidenziatore pastello.</p>
+            <p>Il paragrafo che stai leggendo verrà illuminato, con
+              <strong>4 parole alla volta</strong> evidenziate con un effetto evidenziatore pastello.</p>
           </div>
         </div>
       </div>
