--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="controls-group-inline controls-speed">
         <span class="controls-title">Velocità</span>
         <button id="speedDown" class="btn btn-ghost" type="button">−</button>
-        <span id="speedValue" class="speed-value">1,00 s</span>
+        <span id="speedValue" class="speed-value">0.40 s</span>
         <button id="speedUp" class="btn btn-ghost" type="button">+</button>
       </div>
 
@@ -96,7 +96,7 @@
       </div>
 
       <div class="page-footer">
-        <span class="page-footer-text">Sfoglia come un libro, una pagina alla volta.</span>
+        <span class="page-footer-text">Sfoglia come un libro, un capitolo alla volta.</span>
       </div>
     </section>
 
